AvSimRelease/AvSimDllMotionExternC.h

	typedef struct __motionData
	{
		unsigned int mRoll;
		unsigned int mPitch;
		unsigned int mYaw;
		unsigned int mSway;
		unsigned int mSurge;
		unsigned int mHeave;
		unsigned int mMotionSpeed;
		unsigned int mBlower;

		__motionData()
		{
			Init();
		}

		void Init()
		{
			mRoll			= AV_SIM__ACTION_VALUE_CENTER;
			mPitch			= AV_SIM__ACTION_VALUE_CENTER;
			mYaw			= AV_SIM__ACTION_VALUE_CENTER;
			mSway			= AV_SIM__ACTION_VALUE_CENTER;
			mSurge			= AV_SIM__ACTION_VALUE_CENTER;
			mHeave			= AV_SIM__ACTION_VALUE_CENTER;
			mMotionSpeed	= AV_SIM__MOTION_RPM_SPEED_SCALE_CALCULATE_SAFE; //RPM 스피드 적용 (기존 스피드값 30 정도)
			mBlower			= AV_SIM__BLOW_SCALE_CALCULATE_ZERO;
		}
	}MOTION_DATA, *LPMOTION_DATA;
	typedef struct __motionExtendData
	{
		MOTION_DATA  mMotionData;
		unsigned int mRolling;
		unsigned int mRollingSpeed;
		unsigned int mRollingMode;
		unsigned int mPitching;
		unsigned int mPitchingSpeed;
		unsigned int mPitchingMode;
		unsigned int mYawing;
		unsigned int mYawingSpeed;
		unsigned int mYawingMode;

		__motionExtendData()
		{
			Init();
		}

		void Init()
		{
			mMotionData.Init();
			mRolling		= AV_SIM__ACTION_CIRCLING_VALUE_CENTER;
			mRollingSpeed	= AV_SIM__MOTION_RPM_SPEED_SCALE_CALCULATE_SAFE;//RPM 스피드 적용 (기존 스피드값 30 정도)
			mRollingMode	= AV_SIM__CIRCLING_MODE_DEFAULT;
			mPitching		= AV_SIM__ACTION_CIRCLING_VALUE_CENTER;
			mPitchingSpeed	= AV_SIM__MOTION_RPM_SPEED_SCALE_CALCULATE_SAFE;//RPM 스피드 적용 (기존 스피드값 30 정도)
			mPitchingMode	= AV_SIM__CIRCLING_MODE_DEFAULT;
			mYawing			= AV_SIM__ACTION_CIRCLING_VALUE_CENTER;
			mYawingSpeed	= AV_SIM__MOTION_RPM_SPEED_SCALE_CALCULATE_SAFE;//RPM 스피드 적용 (기존 스피드값 30 정도)
			mYawingMode		= AV_SIM__CIRCLING_MODE_DEFAULT;
		}

	}MOTION_EXTEND_DATA, *LPMOTION_EXTEND_DATA;
	typedef struct __equipmentData
	{
		unsigned int mDO;
		unsigned int mDI;
		unsigned int mSrcAxisPos[eAxisOutput::eAxisMax];
		unsigned int mDstAxisPos[eAxisOutput::eAxisMax];
		unsigned int mEcdAxisPos[eAxisOutput::eAxisMax];	

	}EQUIPMENT_DATA, *LPEQUIPMENT_DATA;
	typedef struct __equipmentExtendData
	{
		unsigned int mDO;
		unsigned int mDI;
		unsigned int mAxisPos[eAxisOutput::eAxisMax];
		MOTOR_ERROR_DATA mAxisAlarm[eAxisOutput::eAxisMax + 1]; //마지막 alarm 값을 읽어오기 위함
	}EQUIPMENT_EXTEND_DATA, *LPEQUIPMENT_EXTEND_DATA;
	/////////////////////////////////////////////////////////////////////////////////////////////
	/////////////////////////////////////////////////////////////////////////////////////////////
	// Initial
	DllExportExternC	BOOL			MotionControl__Initial();
	DllExportExternC	BOOL			MotionControl__Initial_Port(int nPort, int nTimeout);
	DllExportExternC	BOOL			MotionControl__Initial_Sock(const char* szRemoteIP, int nPort, int nTimeout);
	// Destroy
	DllExportExternC	BOOL			MotionControl__Destroy();
	DllExportExternC	BOOL			MotionControl__Destroy_Port(int nPort);
	DllExportExternC	BOOL			MotionControl__Destroy_Sock();
	// State Check
	DllExportExternC	BOOL			MotionControl__State();
	DllExportExternC	BOOL			MotionControl__State_Port(int nPort);
	DllExportExternC	BOOL			MotionControl__State_Sock();
	// Ping Test
	DllExportExternC	BOOL			MotionControl__Ping();
	DllExportExternC	BOOL			MotionControl__Ping_Port(int nPort, bool bResp = true);
	DllExportExternC	BOOL			MotionControl__Ping_Sock(bool bResp = true);
	// Motion Control DO 
	//	nDO : bit flag
	DllExportExternC	BOOL			MotionControl__DO(int nDO);
	DllExportExternC	BOOL			MotionControl__DO_Port(int nPort, int nDO);
	DllExportExternC	BOOL			MotionControl__DO_Sock(int nDO);
	// Motion Control DI (Read)
	//	return : Digital Input bit flag
	DllExportExternC	int				MotionControl__GetDI();
	DllExportExternC	int				MotionControl__GetDI_Port(int nPort);
	DllExportExternC	int				MotionControl__GetDI_Sock();
	// Motion Control DO (Read)
	//	return : Digital Output bit flag
	DllExportExternC	int				MotionControl__GetDO();
	DllExportExternC	int				MotionControl__GetDO_Port(int nPort);
	DllExportExternC	int				MotionControl__GetDO_Sock();
	// Motion Control DOF and Blower
	//	nRoll ~ nHeave : 0~20000
	//	nSpeed : 1(max) ~ 255(min)
	//	nBlower : 0(min) ~ 100(max)
	DllExportExternC	BOOL			MotionControl__DOF_and_Blower(int nRoll, int nPitch, int nYaw, int nSway, int nSurge, int nHeave, int nSpeed, int nBlower);
	DllExportExternC	BOOL			MotionControl__DOF_and_Blower_Port(int nPort, int nRoll, int nPitch, int nYaw, int nSway, int nSurge, int nHeave, int nSpeed, int nBlower);
	DllExportExternC	BOOL			MotionControl__DOF_and_Blower_Sock(int nRoll, int nPitch, int nYaw, int nSway, int nSurge, int nHeave, int nSpeed, int nBlower);
	//
	//////////////////////////////////////////////////////////
	// Motion Control - Get Data(DO, DI, Source Postion, 1 ~ 9 Axis Alarm)
	DllExportExternC	BOOL			MotionControl__EQExtendData(LPEQUIPMENT_EXTEND_DATA pEQData, bool bResp = true);
	DllExportExternC	BOOL			MotionControl__EQExtendData_Port(int nPort, LPEQUIPMENT_EXTEND_DATA pEQData, bool bResp = true);
	DllExportExternC	BOOL			MotionControl__EQExtendData_Sock(LPEQUIPMENT_EXTEND_DATA pEQData, bool bResp = true);
	// MotionControlV2__DOF_and_Blower
	//	nRoll ~ nHeave : 0~20000
	//	nSpeed(RPM : 3000(max) ~ 0(min)
	//	nBlower : 0(min) ~ 100(max)
	DllExportExternC	BOOL			MotionControlV2__DOF_and_Blower(MOTION_DATA stMotionData);
	DllExportExternC	BOOL			MotionControlV2__DOF_and_Blower_Port(int nPort, MOTION_DATA stMotionData);
	DllExportExternC	BOOL			MotionControlV2__DOF_and_Blower_Sock(MOTION_DATA stMotionData);
	/// MotionControlV2__DOF_and_Blower_and_Circling_and_DO_and_DI_and_Axis
	//	nRoll ~ nHeave : 0~20000
	//	nSpeed(RPM : 3000(max) ~ 0(min)
	//	nBlower : 0(min) ~ 100(max)
	//  Rolling ~ Yawing : 0 ~ 36000
	//	nDO : bit flag
	//	nDI : bit flag
	DllExportExternC	BOOL			MotionControlV2__DOF_and_Blower_and_Circling_and_DO_and_DI_and_Axis(MOTION_EXTEND_DATA stMotionData, LPEQUIPMENT_DATA pEQData, bool bResp = true);
	DllExportExternC	BOOL			MotionControlV2__DOF_and_Blower_and_Circling_and_DO_and_DI_and_Axis_Port(int nPort, MOTION_EXTEND_DATA stMotionData, LPEQUIPMENT_DATA pEQData, bool bResp = true);
	DllExportExternC	BOOL			MotionControlV2__DOF_and_Blower_and_Circling_and_DO_and_DI_and_Axis_Sock(MOTION_EXTEND_DATA stMotionData, LPEQUIPMENT_DATA pEQData, bool bResp = true);
	// MotionControlV2__DOF_and_Blower_and_Circling_and_DO_and_DI_and_Axis_and_Alarm
	//	nRoll ~ nHeave : 0~20000
	//	nSpeed(RPM : 3000(max) ~ 0(min)
	//	nBlower : 0(min) ~ 100(max)
	//  Rolling ~ Yawing : 0 ~ 36000
	//	nDO : bit flag
	//	nDI : bit flag
	DllExportExternC	BOOL			MotionControlV2__DOF_and_Blower_and_Circling_and_DO_and_DI_and_Axis_and_Alarm(MOTION_EXTEND_DATA stMotionData, LPEQUIPMENT_EXTEND_DATA pEQData, bool bResp = true);
	DllExportExternC	BOOL			MotionControlV2__DOF_and_Blower_and_Circling_and_DO_and_DI_and_Axis_and_Alarm_Port(int nPort, MOTION_EXTEND_DATA stMotionData, LPEQUIPMENT_EXTEND_DATA pEQData, bool bResp = true);
	DllExportExternC	BOOL			MotionControlV2__DOF_and_Blower_and_Circling_and_DO_and_DI_and_Axis_and_Alarm_Sock(MOTION_EXTEND_DATA stMotionData, LPEQUIPMENT_EXTEND_DATA pEQData, bool bResp = true);
	////////////////////////////////////////////////////////////////////////////////////////
	// Socket Parameter Setting Function
	///////////////////////////////////////////////////////////////////////////////////////
	DllExportExternC	BOOL			ReadTcpSocketMode(int* pData);
	DllExportExternC	BOOL			ReadTcpSocketMode_Port(int nPort, int* pData);
	DllExportExternC	BOOL			ReadTcpSocketMode_Sock(int* pData);
	DllExportExternC	BOOL			WriteTcpSocketMode(int nData);
	DllExportExternC	BOOL			WriteTcpSocketMode_Port(int nPort, int nData);
	DllExportExternC	BOOL			WriteTcpSocketMode_Sock(int nData);
	DllExportExternC	BOOL			ReadWifiMode(int* pData);
	DllExportExternC	BOOL			ReadWifiMode_Port(int nPort, int* pData);
	DllExportExternC	BOOL			ReadWifiMode_Sock(int* pData);
	DllExportExternC	BOOL			WriteWifiMode(int nData);
	DllExportExternC	BOOL			WriteWifiMode_Port(int nPort, int nData);
	DllExportExternC	BOOL			WriteWifiMode_Sock(int nData);
	
	DllExportExternC	BOOL			ReadWifiChannel(int* pData);
	DllExportExternC	BOOL			ReadWifiChannel_Port(int nPort, int* pData);
	DllExportExternC	BOOL			ReadWifiChannel_Sock(int* pData);
	DllExportExternC	BOOL			WriteWifiChannel(int nData);
	DllExportExternC	BOOL			WriteWifiChannel_Port(int nPort, int nData);
	DllExportExternC	BOOL			WriteWifiChannel_Sock(int nData);
	DllExportExternC	BOOL			ReadBluetoothDeviceId(char* szData);
	DllExportExternC	BOOL			ReadBluetoothDeviceId_Port(int nPort, char* szData);
	DllExportExternC	BOOL			ReadBluetoothDeviceId_Sock(char* szData);
	DllExportExternC	BOOL			WriteBluetoothDeviceId(const char* szData);
	DllExportExternC	BOOL			WriteBluetoothDeviceId_Port(int nPort, const char* szData);
	DllExportExternC	BOOL			WriteBluetoothDeviceId_Sock(const char* szData);
	DllExportExternC	BOOL			ReadBluetoothDevicePassword(char* szData);
	DllExportExternC	BOOL			ReadBluetoothDevicePassword_Port(int nPort, char* szData);
	DllExportExternC	BOOL			ReadBluetoothDevicePassword_Sock(char* szData);
	DllExportExternC	BOOL			WriteBluetoothDevicePassword(const char* szData);
	DllExportExternC	BOOL			WriteBluetoothDevicePassword_Port(int nPort, const char* szData);
	DllExportExternC	BOOL			WriteBluetoothDevicePassword_Sock(const char* szData);
	DllExportExternC	BOOL			ReadSocketServerIP(char* szData);
	DllExportExternC	BOOL			ReadSocketServerIP_Port(int nPort, char* szData);
	DllExportExternC	BOOL			ReadSocketServerIP_Sock(char* szData);